fixing height on mobile: 80vh -> 85vh

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -195,11 +195,11 @@ input[type="password"] {
     }
 
     #app {
-      height: 80vh;
+      height: 85vh;
     }
 
     .app-container {
-      height: 80vh;
+      height: 85vh;
     }
   }
 
